# setlist-app

./: .gitignore  .projenrc.js  Cargo.toml  amplify.yml  customHttp.yml  package-lock.json  package.json
.github/workflows/: rust.yml
.projen/: tasks.json
migrations/2020-02-26-225851_create_setlists/: down.sql  up.sql
server/: Cargo.toml  Rocket.toml  experimental Dockerfile
server/migrations/2020-02-26-225851_create_setlists/: up.sql
server/migrations/2020-03-09-034337_add_artists/: down.sql  up.sql
server/migrations/2020-03-11-051832_add_songs/: up.sql
server/migrations/2020-04-27-214611_create_users/: up.sql
server/src/: errors.rs  fns.rs  lib.rs  main.rs  models.rs  resources.rs  routes.rs  schema.rs
server/src/apis/: mod.rs  setlist_fm.rs
server/src/apis/setlist_fm/: models.rs
server/src/fns/: mod.rs  show_setlists.rs
server/src/resources/: db.rs
server/src/routes/: artist.rs  index.rs
serverless-backend/: .gitignore  .projenrc.js  .projenrc.ts  cdk.json  package-lock.json  package.json  tsconfig.json
serverless-backend/lambda/: artist-search.d.ts  artist-search.ts  setlist-search.d.ts  setlist-search.ts
serverless-backend/lib/: serverless-backend-stack.d.ts  serverless-backend-stack.ts
serverless-backend/models/: User.ts
src/: lib.rs  main.rs
src/fns/: mod.rs  show_posts.rs
src/resources/: mod.rs
web/: .env  .eslintcache  .eslintrc  jest.config.ts  package-lock.json  package.json  settings.ts  tsconfig.json  tslint.json
web/amplify/: team-provider-info.json
web/public/: index.html  manifest.json
web/src/: .index.tsx.swp  App.css  App.test.tsx  App.tsx  Home.tsx  Login.tsx  Register.tsx  actions.ts  configureStore.ts  index.tsx  settings.ts
(+49 files in other folders)
