[package]
name = "setlist-app"
version = "0.1.0"
authors = ["Griffin Hammer <grifhammer@gmail.com>"]
edition = "2018"
default-run = "setlist-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = {version = "1.4.3", features = ["postgres"]}
dotenv = "0.15.0"
reqwest = "0.10.3"
serde = {version = "1.0.104", features = ["derive"]}

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]