[package]
name = "setlist-app"
version = "0.1.0"
authors = ["Griffin Hammer <grifhammer@gmail.com>"]
edition = "2018"
default-run = "setlist-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix= "0.9.0"
actix-cors = "0.2.0"
actix-web = "2.0.0"
actix-rt = "1"
diesel = {version = "1.4.3", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
reqwest = {version="0.10.3", features = ["json"]}
serde = {version = "1.0.104", features = ["derive"]}
url = "2.1.1"
futures = "0.3.4"
serde_json = "1.0.48"